Fix warnings & layout issues

--- a/ppe-reuze/src/App.sass
+++ b/ppe-reuze/src/App.sass
@@ -4,3 +4,6 @@
 $family-sans-serif: 'Sen', sans-serif;
 
 @import "../node_modules/bulma/bulma.sass";
+
+.app-content 
+    margin-top: 4em
